added new endpoint for a complex request using pipelines (in mondodb).
